# ms-taskbench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: gsd-file-manifest.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/: default.yaml
configs/solver/: demo_recorder.yaml  random.yaml  replay.yaml  shelf_reachability.yaml  stack_cubes.yaml
docs/: architecture.md  demos.md  skills.md
examples/demo_recorder/: solver.py
examples/shelf_reachability/: solver.py
examples/stack_n_cubes/: solver.py
ps_bed/: config.py  env.py  logger.py  recorder.py  run.py
ps_bed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ps_bed/envs/: __init__.py  bin_with_objects.py  shelf_env.py  stack_cube_distractor.py  stack_n_cube.py
ps_bed/skills/: motion.py  pick_place.py  primitives.py  stack_n.py
ps_bed/solvers/: __init__.py  base.py  demo_recorder.py  shelf_reachability.py  stack_cubes.py
scripts/: run.sh
taskbench/: config.py  logger.py  recorder.py  run.py  solver.py
taskbench/envs/: __init__.py  base.py  bin_with_objects.py  factory.py  shelf_env.py  stack_cube_distractor.py  stack_n_cube.py
taskbench/skills/: context.py  motion.py  primitives.py  robot_config.py
taskbench/solvers/: demo_recorder.py  replay.py  stack_n_cubes.py  (+1 more)
(+62 files in other folders)
