[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ps_bed"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mani_skill",
    "torch",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb",
    "gymnasium",
]

[project.optional-dependencies]
dev = ["black", "isort"]

[tool.setuptools.packages.find]
include = ["ps_bed*"]
